--- a/cumorah/src/app/pages/mainpage/home/home.page.scss
+++ b/cumorah/src/app/pages/mainpage/home/home.page.scss
@@ -4,7 +4,7 @@ swiper-slide {
     color: white;
 }
 
-h2{
+h5{
     padding-inline: 16px;
 }
 
@@ -71,3 +71,9 @@ ion-button {
     height: 2.5rem;
     width: 2.5rem;
 }
+
+.list-group{
+    // display: flex;
+    // width: 200%;
+}
+
