--- a/cumorah/src/app/pages/mainpage/student-detail/student-detail.page.html
+++ b/cumorah/src/app/pages/mainpage/student-detail/student-detail.page.html
@@ -1,6 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-title>{{student?.name}}</ion-title>
+    <img slot="end"  [src]="'https://flagsapi.com/' + student?.countryCode + '/flat/32.png'" />
+
   </ion-toolbar>
+
+
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -9,16 +14,14 @@
     <div class="detail-container-header">
 
       <ion-avatar>
-        <img [src]="student?.imgUrl" />
+        <img [src]="student?.imgURL" />
       </ion-avatar>
     </div>
     <div class="detail-container-content">
       <ion-card>
         <ion-card-header>
-          <img [src]="'https://flagsapi.com/' + student?.countryCode + '/flat/32.png'" />
 
-          <ion-card-title>{{student?.nickname}}</ion-card-title>
-          <ion-card-subtitle><a href="https://www.linkedin.com/in/lucasteixeira20/">{{'https://www.linkedin.com/in/lucasteixeira20/' | linkedin}}</a></ion-card-subtitle>
+          <ion-card-subtitle><a [href]="student?.linkedin">{{ student?.linkedin| linkedin}}</a></ion-card-subtitle>
         </ion-card-header>
         <ion-card-content>
           <div>
@@ -27,13 +30,23 @@
               <div class="role-card business">business</div>
             </div>
             <div class="hobbies-container">
+              <div *ngFor="let hobbie of "></div>
               <div class="hobbies-card first">Dance</div>
               <div class="hobbies-card">basketball</div>
               <div class="hobbies-card last">gym</div>
             </div>
           </div>
+
+
         </ion-card-content>
       </ion-card>
+      <swiper-container [slidesPerView]="1.2" [loop]="false" [centeredSlides]="true" [spaceBetween]="10">
+        <swiper-slide *ngFor="let img of student?.imgs">
+          <div class="swiper-header-container">
+            <img [src]="img.url" />
+          </div>
+        </swiper-slide>
+      </swiper-container>
     </div>
   </div>
 
