--- a/cumorah/src/app/components/input/input.component.scss
+++ b/cumorah/src/app/components/input/input.component.scss
@@ -1,7 +1,8 @@
 .form-field{
     position: relative;
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
     height: 40px;
+    align-self: center;
     // color: white;
 
     label{
@@ -9,7 +10,9 @@
         left: 1rem;
         top: .6rem;
         padding: 0 0.25rem;
-        color: #939fab;
+        // color: #939fab;
+        // color: #353b41;
+        // color: #fff;
         font-size: 1rem;
         transition: 0.3s;
     }
@@ -21,11 +24,13 @@
         height: 100%;
         width: 100%;
         font-size: 14px;
-        border: 2px solid #e7ebee;
+        // border: 2px solid #e7ebee;
+        border: 2px solid #100E10;
         border-radius: 10px;
         outline: none;
         padding: 1rem;
-        background: none;
+        // background: none;
+        background: #1E1E1E;
         z-index: 1;
         display: flex;
         justify-content: center;
@@ -34,15 +39,26 @@
     }
 
     input:focus{
-        border-color: #36BFBEff;
+        // border-color: #36BFBEff;
+        background-color: #1E1E1E;
     }
 
     .label-focused {
+        // display: none;
         top: -0.4rem;
         left: 0.8rem;
         font-size: 14px;
         font-weight: 600;
-        background-color: #1E1E1E;
+        background: rgba(204, 204, 204, 0.0);
+        // background-color: #1E1E1E;
+        // background-color: rgba(54,191,190,1) ;
         z-index: 100;
+    }
+
+    ion-icon{
+        position: absolute;
+        right: 3%;
+        bottom: calc(50% - (16px / 2));
+        z-index: 1;
     }
 }
