--- a/cumorah/src/app/components/search-container/search-container.component.html
+++ b/cumorah/src/app/components/search-container/search-container.component.html
@@ -1,47 +1,91 @@
 <div class="search-container" [class.hide]="!hasCharacter">
   <div class="search-container-btns">
-    <app-search-category-button *ngFor="let t of topics" (clickEvent)="filterList($event)" [label]="t" [style]="'margin: 10px'"></app-search-category-button>
+    <app-search-category-button *ngFor="let t of topics" (clickEvent)="filterList($event)" [label]="t"
+      [style]="'margin: 8px'"></app-search-category-button>
   </div>
-  <ion-list>
-    <ion-list-header>
-      Education
-    </ion-list-header>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="https://my.cumorahacademy.org/_files/categories/42_6Yzw2TUM.jpg?fit=770x200" /></ion-avatar>
-      <ion-label>Leadership</ion-label>
-    </ion-item>
-    <ion-item class="">
-      <ion-avatar slot="start">
-        <img src="https://my.cumorahacademy.org/_files/categories/43_UOXJp1M6.png?fit=770x200" /></ion-avatar>
-      <ion-label>Business</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-avatar slot="start">
-        <img src="https://my.cumorahacademy.org/_files/categories/41_jmIiKgaO.jpg?fit=770x200" /></ion-avatar>
-      <ion-label>Soft Skills & Finding a Job</ion-label>
-    </ion-item>
-  </ion-list>
 
   <ion-list>
-    <ion-list-header>People</ion-list-header>
-    <ng-container *ngFor="let student of filteredStudents;let i">
-      <ion-item (click)="goToDetail(student.id)" >
-        <ion-avatar slot="start"><img [src]="student.imgUrl" /></ion-avatar>
-        <ion-label> {{student.nickname}} </ion-label>
-        <ion-badge slot="end" color="warning">{{student.points}}</ion-badge>
-      </ion-item>
+    <ion-item *ngFor="let search of searchResult" (click)="goToTopicSearched(search)">
+      <ion-icon slot="start" name="search-outline"></ion-icon>
+      <ion-avatar slot="start"><img [src]="search.imgURL" /></ion-avatar>
+      {{search.name}}
+    </ion-item>
+  </ion-list>
+  <!-- *ngIf="filteredCourses.length !== 0 || filteredMentors.length !== 0 || filteredStudents.length !== 0; else notFoundTemplate" -->
+  <ng-container *ngIf="false">
+    <ion-card>
+      <ion-list>
+        <ion-list-header>
+          Education
+        </ion-list-header>
+        <ion-item *ngFor="let course of filteredCourses">
+          <ion-avatar slot="start">
+            <img [src]="course.imgURL" /></ion-avatar>
+          <ion-label>{{course.name}}</ion-label>
+        </ion-item>
+        <ng-container *ngIf="filteredCourses.length === 0">
+          <div class="no-result-container">
+            <p>No results found</p>
+          </div>
+        </ng-container>
+        <button class="show-all-btn">Show all courses</button>
+      </ion-list>
+    </ion-card>
+
+    <ion-card>
+      <ion-list>
+        <ion-list-header>Students</ion-list-header>
+        <ng-container *ngFor="let student of filteredStudents">
+          <ion-item (click)="goToDetail(student.id)">
+            <ion-avatar slot="start"><img [src]="student.imgURL" /></ion-avatar>
+            <ion-label> {{student.nickname}} </ion-label>
+            <ion-badge slot="end" color="warning">{{student.points}}</ion-badge>
+          </ion-item>
+        </ng-container>
+        <ng-container *ngIf="filteredStudents.length === 0">
+          <div class="no-result-container">
+            <p>No results found</p>
+          </div>
+        </ng-container>
+        <button class="show-all-btn">Show all students</button>
+      </ion-list>
+    </ion-card>
+
+    <ion-card>
+      <ion-list>
+        <ion-list-header>Mentors</ion-list-header>
+        <ng-container *ngFor="let m of filteredMentors">
+          <ion-item (click)="goToDetail(m.id)">
+            <ion-avatar slot="start"><img [src]="m.imgURL" /></ion-avatar>
+            <ion-label> {{m.name}} </ion-label>
+          </ion-item>
+        </ng-container>
+        <ng-container *ngIf="filteredMentors.length === 0">
+          <div class="no-result-container">
+            <p>No results found</p>
+          </div>
+        </ng-container>
+        <button class="show-all-btn">Show all mentors</button>
+      </ion-list>
+    </ion-card>
+
+    <ng-container *ngIf="categoryEnum.toString() === 'students'">
+      <ion-list>
+        <ion-item>Teste</ion-item>
+      </ion-list>
+      students container
     </ng-container>
-  </ion-list>
 
+  </ng-container>
 
-  <ng-container *ngIf="categoryEnum.toString() === 'students'">
-    <ion-list>
-      <ion-item>Teste</ion-item>
-    </ion-list>
-    students container
- </ng-container>
-</div>  <!-- <ng-container *ngIf="categorycategoryEnum === 'none'">
-     students container
-     <button>show all</button>
-  </ng-container> -->
+  <ng-template #notFoundTemplate>
+    <div class="no-result-container">
+      <h2>No results found</h2>
+    </div>
+  </ng-template>
+
+</div>
+
+<!-- <ion-modal [isOpen]="true">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quam eaque facilis dignissimos omnis. Harum hic dolor repellat? Ex libero mollitia maxime illum qui pariatur quae adipisci optio rem omnis?
+</ion-modal> -->
