--- a/cumorah/src/app/pages/mainpage/mainpage.page.html
+++ b/cumorah/src/app/pages/mainpage/mainpage.page.html
@@ -5,18 +5,14 @@
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
-
-    <!-- <ion-tab-button tab="map">
-      <ion-icon aria-hidden="true" name="map"></ion-icon>
-      <ion-label>Search</ion-label>
-    </ion-tab-button> -->
-
-    <ion-tab-button tab="student">
-      <!-- <ion-icon aria-hidden="true" name="map"></ion-icon> -->
+    <ion-tab-button tab="study">
       <ion-icon name="book-outline"></ion-icon>
-      <ion-label>Student</ion-label>
+      <ion-label>Study</ion-label>
     </ion-tab-button>
-
+    <ion-tab-button tab="work-time">
+      <ion-icon name="hammer-outline"></ion-icon>
+      <ion-label>Work</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="calendar">
       <ion-icon aria-hidden="true" name="calendar"></ion-icon>
       <ion-label>Calendar</ion-label>
