--- a/cumorah/src/global.scss
+++ b/cumorah/src/global.scss
@@ -24,3 +24,8 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+
+ion-toolbar{
+    --background: linear-gradient(90deg, rgba(54,191,190,1) 0%, rgba(42,53,125,1) 100%);
+}
