all pages included

--- a/cumorah/src/app/pages/mainpage/calendar/calendar.page.html
+++ b/cumorah/src/app/pages/mainpage/calendar/calendar.page.html
@@ -1,13 +1,18 @@
 <ion-header [translucent]="true">
-  <ion-toolbar class="toolbar-container">
-    <ion-avatar class="profile-avatar" slot="start">
-      <img [src]="user.imgURL" />
-    </ion-avatar>
-    <app-input (textChanged)="filterStudents($event)" [style]="'margin: 8px'" [type]="'text'"
-      [label]="'Search'"></app-input>
+  <ion-toolbar>
+    <div class="toolbar-container">
+      <ion-title *ngIf="!showSearchBar">Calendar</ion-title>
+      <ng-container *ngIf="showSearchBar">
+        <app-input #inputComp (closeInput)="showSearchBar = false" (textChanged)="filterStudents($event)"
+          [type]="'text'" [label]="'Search'"></app-input>
+      </ng-container>
+    </div>
 
     <ion-buttons slot="primary">
-      <ion-button>
+      <ion-button *ngIf="!showSearchBar" (click)="showSearchBar = !showSearchBar">
+        <ion-icon name="search"></ion-icon>
+      </ion-button>
+      <ion-button id="open-modal" (click)="isNotiOpen = !isNotiOpen">
         <ion-badge slot="end">4</ion-badge>
         <ion-icon name="notifications-outline"></ion-icon>
       </ion-button>
