--- a/cumorah/src/app/pages/mainpage/calendar/calendar.page.scss
+++ b/cumorah/src/app/pages/mainpage/calendar/calendar.page.scss
@@ -29,3 +29,11 @@ ion-button {
     text-align: center;
     vertical-align: center;
 }
+
+.toolbar-container{
+    padding: .4rem .4rem;
+}
+.profile-avatar{
+    height: 2.5rem;
+    width: 2.5rem;
+}
