--- a/cumorah/src/app/pages/mainpage/work-time/work-time.page.html
+++ b/cumorah/src/app/pages/mainpage/work-time/work-time.page.html
@@ -1,6 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>work</ion-title>
+    <div class="toolbar-container">
+      <ion-title *ngIf="!showSearchBar">Working hour</ion-title>
+      <ng-container *ngIf="showSearchBar">
+        <app-input #inputComp (closeInput)="showSearchBar = false" (textChanged)="filterStudents($event)"
+          [type]="'text'" [label]="'Search'"></app-input>
+      </ng-container>
+    </div>
+
+    <ion-buttons slot="primary">
+      <ion-button *ngIf="!showSearchBar" (click)="showSearchBar = !showSearchBar">
+        <ion-icon name="search"></ion-icon>
+      </ion-button>
+      <ion-button id="open-modal" (click)="isNotiOpen = !isNotiOpen">
+        <ion-badge slot="end">4</ion-badge>
+        <ion-icon name="notifications-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
