--- a/cumorah/src/app/pages/mainpage/mentor-detail/mentor-detail.page.scss
+++ b/cumorah/src/app/pages/mainpage/mentor-detail/mentor-detail.page.scss
@@ -2,3 +2,16 @@ li{
     margin-top: 4px;
     opacity: .7;
 }
+
+.btn-actions-container{
+    display: flex;
+    justify-content: center;
+}
+
+
+.detail-container{
+    display: flex;
+    flex-direction: column;
+    // flex-grow: 2;
+
+}
