--- a/cumorah/src/app/pages/mainpage/study-detail/study-detail.page.html
+++ b/cumorah/src/app/pages/mainpage/study-detail/study-detail.page.html
@@ -8,12 +8,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">study-detail</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <img [src]="course?.imgURL" />
   <div class="ion-padding">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, non. Enim reiciendis suscipit blanditiis.
@@ -24,10 +18,11 @@
 
   <ion-list class="ion-padding">
     <ion-item *ngFor="let class of classes; let indexOfelement=index;">
-      <div style="display: flex;">
-        <div slot="start">{{indexOfelement + 1 + '  '}}</div>
-        <div>{{class}}</div>
-      </div>
+      <div slot="start">{{indexOfelement + 1 + '  '}}</div>
+
+      <!-- <div style="display: flex;"> -->
+        <ion-label>{{class}}</ion-label>
+      <!-- </div> -->
     </ion-item>
   </ion-list>
 </ion-content>
