--- a/cumorah/src/app/pages/mainpage/work-time/work-time.page.scss
+++ b/cumorah/src/app/pages/mainpage/work-time/work-time.page.scss
@@ -3,3 +3,17 @@ ion-fab-button{
     right: 10px;
     bottom: 80px;
 }
+
+
+ion-button {
+    position: relative;
+
+    ion-badge {
+        position: absolute;
+        bottom: 40%;
+        left: 50%;
+        --background: red;
+        border-radius: 50%;
+        --color: white;
+    }
+}
