--- a/cumorah/src/app/pages/mainpage/student-detail/student-detail.page.scss
+++ b/cumorah/src/app/pages/mainpage/student-detail/student-detail.page.scss
@@ -127,3 +127,20 @@
         border-radius: 20px;
     }
 }
+
+.opaque-background-container
+{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
+    position: absolute;
+    top: 0;
+
+    ion-avatar {
+        height: 144px;
+        width: 144px;
+    }
+}
