--- a/cumorah/src/app/pages/mainpage/student-detail/student-detail.page.scss
+++ b/cumorah/src/app/pages/mainpage/student-detail/student-detail.page.scss
@@ -138,6 +138,7 @@
     background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
     position: absolute;
     top: 0;
+    z-index: 1;
 
     ion-avatar {
         height: 144px;
